Corrected the timelevels set for the auxiliary variables.

--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -87,7 +87,7 @@
     "gho.GiRaFFE_Higher_Order()\n",
     "\n",
     "# Step 1: Set the finite differencing order to 4.\n",
-    "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 6)\n"
+    "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 2)\n"
    ]
   },
   {
@@ -1498,41 +1498,35 @@
     "USES FUNCTION Boundary_SelectVarForBC\n",
     "\n",
     "public:\n",
-    "cctk_real GiRaFFE_aux type = GF Timelevels=3 tags='tensortypealias=\"Scalar\"'\n",
+    "cctk_real GiRaFFE_aux type = GF Timelevels=1 tags='prolongation=\"none\"'\n",
     "{\n",
     "  uU0,uU1,uU2,uD0,uD1,uD2,u0alpha,alpsqrtgam,AevolParen,PevolParenU0,PevolParenU1,PevolParenU2,\n",
     "  gammaUU00,gammaUU01,gammaUU02,gammaUU11,gammaUU12,gammaUU22,gammadet\n",
     "} \"The evolved scalar fields\"\n",
     "\n",
     "public:\n",
-    "cctk_real GiRaFFE_Bs type = GF Timelevels=3 tags='tensortypealias=\"Scalar\"'\n",
+    "cctk_real GiRaFFE_Bs type = GF Timelevels=1 tags='InterpNumTimelevels=1 prolongation=\"none\"'\n",
     "{\n",
     "  BU0,BU1,BU2\n",
     "} \"The B field\"\n",
     "\n",
     "public:\n",
-    "cctk_real GiRaFFE_Vs type = GF Timelevels=3 tags='tensortypealias=\"Scalar\"'\n",
+    "cctk_real GiRaFFE_Vs type = GF Timelevels=1 tags='InterpNumTimelevels=1 prolongation=\"none\"'\n",
     "{\n",
-    "  ValenciavU0,ValenciavU1,ValenciavU2\n",
-    "} \"The Valencia 3-velocity\"\n",
+    "  u4upperZero,ValenciavU0,ValenciavU1,ValenciavU2\n",
+    "} \"The zeroth component of the four velocity and the Valencia 3-velocity\"\n",
     "\n",
     "public:\n",
-    "cctk_real GiRaFFE_rhs type = GF Timelevels=1 tags='tensortypealias=\"Scalar\"'\n",
+    "cctk_real GiRaFFE_rhs type = GF Timelevels=1 tags='prolongation=\"none\" Checkpoint=\"no\"'\n",
     "{\n",
     "  Stilde_rhsD0,Stilde_rhsD1,Stilde_rhsD2,A_rhsD0,A_rhsD1,A_rhsD2,psi6Phi_rhs\n",
     "} \"The evolved scalar fields\"\n",
     "\n",
     "public:\n",
-    "cctk_real GiRaFFE_vars type = GF Timelevels=3 tags='tensortypealias=\"Scalar\"'\n",
+    "cctk_real GiRaFFE_vars type = GF Timelevels=3 tags='prolongation=\"none\"'\n",
     "{\n",
     "  StildeD0,StildeD1,StildeD2,AD0,AD1,AD2,psi6Phi\n",
     "} \"The evolved scalar fields\"\n",
-    "\n",
-    "public:\n",
-    "cctk_real GiRaFFE_u0 type = GF Timelevels=3 tags='tensortypealias=\"Scalar\"'\n",
-    "{\n",
-    "  u4upperZero\n",
-    "} \"The zeroth component of the four velocity\"\n",
     "\n",
     "#########################################\n",
     "###  Aliased functions from Carpet    ###\n",
@@ -1704,10 +1698,9 @@
     "%%writefile GiRaFFE_HO/schedule.ccl\n",
     "STORAGE: GiRaFFE_rhs[1]\n",
     "STORAGE: GiRaFFE_vars[3]\n",
-    "STORAGE: GiRaFFE_aux[3]\n",
-    "STORAGE: GiRaFFE_Bs[3]\n",
-    "STORAGE: GiRaFFE_Vs[3]\n",
-    "STORAGE: GiRaFFE_u0[3]\n",
+    "STORAGE: GiRaFFE_aux[1]\n",
+    "STORAGE: GiRaFFE_Bs[1]\n",
+    "STORAGE: GiRaFFE_Vs[1]\n",
     "\n",
     "STORAGE: HydroBase::rho[1],HydroBase::press[1],HydroBase::eps[1],HydroBase::vel[1],HydroBase::Bvec[1],HydroBase::Avec[1],HydroBase::Aphi[1]\n",
     "\n",
@@ -1921,6 +1914,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This yields the following, as output by the toolkit itself, with some extra formatting:\n",
+    "\n",
+    "  1. GiRaFFE_HO::GiRaFFE_HO_RegisterVars: [meta] Register Variables for MoL\n",
+    "  1. GROUP GiRaFFE_Initial: Schedule GiRaFFE functions in HydroBase_Initial\n",
+    "    1. GiRaFFEfood_HO::GiRaFFE_Food: Initial data for GiRaFFE\n",
+    "    1. GiRaFFE_HO::initial_driver_A_to_B: Calculates the B-field from the vector potential\n",
+    "    1. GiRaFFE_HO::mhdpostid: Compute post-initialdata quantities\n",
+    "    1. GROUP GiRaFFE_ID_Converter: Translate ET-generated, HydroBase-compatible initial data and convert into variables used by GiRaFFE\n",
+    "      1. GiRaFFEfood_HO::first_initialdata: [local] Convert HydroBase initial data (ID) to ID that GiRaFFE can read.\n",
+    "      1. GiRaFFE_HO::GiRaFFE_HO_SelectBCs: [level] Boundaries of GiRaFFE equations\n",
+    "      1. GROUP GiRaFFE_HO_ApplyBCs: Apply boundary conditions\n",
+    "          1. GiRaFFE_HO::driver_A_to_B: Calculates the B-field from the vector potential\n",
+    "      1. GiRaFFE_HO::GiRaFFE_HO_SelectBCs: [level] Boundaries of GiRaFFE equations\n",
+    "      1. GROUP GiRaFFE_HO_ApplyBCs: Apply boundary conditions\n",
+    "          1. GiRaFFE_HO::driver_A_to_B: Calculates the B-field from the vector potential\n",
+    "    1. GROUP GiRaFFE_PostPostInitial: HydroBase_Con2Prim in CCTK_POSTPOSTINITIAL sets conserv to prim then outer boundaries (OBs, which are technically disabled). The post OB SYNCs actually reprolongate the conservative variables, making cons and prims INCONSISTENT. So here we redo the con2prim, avoiding the SYNC afterward, then copy the result to other timelevels\n",
+    "      1. GiRaFFE_HO::GiRaFFE_HO_SelectBCs: [level] Boundaries of GiRaFFE equations\n",
+    "      1. GROUP GiRaFFE_HO_ApplyBCs: Apply boundary conditions\n",
+    "          1. GiRaFFE_HO::driver_A_to_B: Calculates the B-field from the vector potential\n",
+    "    1. GiRaFFE_HO::GiRaFFE_to_HydroBase: Converts the GiRaFFE variables to HydroBase variables\n",
+    "    1. GiRaFFE_HO::GiRaFFE_HO_SelectBCs: [level] Boundaries of GiRaFFE equations\n",
+    "    1. GROUP GiRaFFE_HO_ApplyBCs: Apply boundary conditions\n",
+    "        1. GiRaFFE_HO::driver_A_to_B: Calculates the B-field from the vector potential\n",
+    "            1. GiRaFFE_HO::HydroBase_to_GiRaFFE: Converts the HydroBase variables to GiRaFFE variables\n",
+    "            1. GiRaFFE_HO::GiRaFFE_HO_set_prereqs: Sets prerequisite quantities for the GiRaFFE right-hand sides\n",
+    "            1. GiRaFFE_HO::GiRaFFE_HO_Evolution: Sets the GiRaFFE right-hand sides\n",
+    "            1. GiRaFFE_HO::GiRaFFE_HO_SelectBCs: [level] Boundaries of GiRaFFE equations\n",
+    "            1. GROUP GiRaFFE_HO_ApplyBCs: Apply boundary conditions\n",
+    "                1. GiRaFFE_HO::driver_A_to_B: Calculates the B-field from the vector potential\n",
+    "  1. GROUP GiRaFFE_HO_ApplyBCs: Apply boundary conditions\n",
+    "    1. GiRaFFE_HO::GiRaFFE_HO_SelectBCs: [level] Boundaries of GiRaFFE equations\n",
+    "    1. GROUP GiRaFFE_HO_ApplyBCs: Apply boundary conditions\n",
+    "        1. GiRaFFE_HO::driver_A_to_B: Calculates the B-field from the vector potential\n",
+    "  1. GiRaFFE_HO::GiRaFFE_to_HydroBase: Converts the GiRaFFE variables to HydroBase variables\n",
+    "    1. GiRaFFE_HO::GiRaFFE_HO_SelectBCs: [level] Boundaries of GiRaFFE equations\n",
+    "    1. GROUP GiRaFFE_HO_ApplyBCs: Apply boundary conditions\n",
+    "        1. GiRaFFE_HO::driver_A_to_B: Calculates the B-field from the vector potential\n",
+    "\n",
     "<a id='step2c'></a>\n",
     "\n",
     "#### Step 2.3: Add the C file to Einstein Toolkit compilation list.\n",
@@ -1968,7 +1999,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb to latex\n",
-      "[NbConvertApp] Writing 163337 bytes to Tutorial-ETK_thorn-GiRaFFE_Higher_Order.tex\n",
+      "[NbConvertApp] Writing 167985 bytes to Tutorial-ETK_thorn-GiRaFFE_Higher_Order.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
