--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -639,7 +639,10 @@
     "\\begin{align}\n",
     "\\left(b^2\\right)_{,j} &= \\partial_j \\left( g_{\\mu\\nu} b^\\mu b^\\nu \\right) \\\\\n",
     "                      &= g_{\\mu\\nu,j} b^\\mu b^\\nu + g_{\\mu\\nu} b^\\mu_{,j} b^\\nu + g_{\\mu\\nu} b^\\mu b^\\nu_{,j} \\\\\n",
-    "                      &= g_{\\mu\\nu,j} b^\\mu b^\\nu + 2 g_{\\mu\\nu} b^\\mu_{,j} b^\\nu.\n",
+    "\\end{align}\n",
+    "Recall that, by definition, the metric must be symmetric; that is, $g_{\\mu\\nu} = g_{\\nu\\mu}$. Also, consider that we can freely rename bound indices. So, if we swap $\\mu$ and $\\nu$ in the final term above, $g_{\\mu\\nu} b^\\mu b^\\nu_{,j} = g_{\\nu\\mu} b^\\nu b^\\mu_{,j}$ becomes $g_{\\mu\\nu} b^\\nu b^\\mu_{,j} = $\n",
+    "\\begin{align}\n",
+    "\\left(b^2\\right)_{,j} &= g_{\\mu\\nu,j} b^\\mu b^\\nu + 2 g_{\\mu\\nu} b^\\mu_{,j} b^\\nu.\n",
     "\\end{align}\n",
     "We have already defined the spatial derivatives of the four-metric $g_{\\mu\\nu,j}$ in [this section](#step3); we have also defined the spatial derivatives of spatial components of $b^\\mu$, $b^i_{,k}$ in [this section](#bideriv). Notice the above expression for $\\partial_j T^j_{{\\rm EM} i}$ requires spatial derivatives of the *zeroth* component of $b^\\mu$ as well, $b^0_{,j}$, which we will now compute. Starting with the definition, and applying the quotient rule:\n",
     "\\begin{align}\n",
