Tutorial-GiRaFFE_Higher_Order: Add some more fixes suggested by George

--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -10,7 +10,7 @@
     "# $\\texttt{GiRaFFE}$: General Relativistic Force-Free Electrodynamics\n",
     "$$\\label{top}$$\n",
     "\n",
-    "**Authors: Patrick Nelson, Zachariah Etienne, and Maria Babiuc-Hamilton**\n",
+    "**Authors: Patrick Nelson, Zachariah Etienne, George Vopal, and Maria Babiuc-Hamilton**\n",
     "\n",
     "<font color='red'>**This module is under active development -- do *not* use the resulting C code output for doing science.**</font>\n",
     "\n",
@@ -410,9 +410,9 @@
     "\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
-    "If we look at the evolution equation, we see that we will need spatial  derivatives of $T^{\\mu\\nu}_{\\rm EM}$. When confronted with derivatives of complicated expressions, it is generally convenient to declare those expressions as gridfunctions themselves, allowing NRPy+ to take finite-difference derivatives of the expressions. This can even reduce the truncation error associated with the finite differences, because the alternative is to use a function of several finite-difference derivatives, allowing more error to accumulate than the extra gridfunction will introduce. While we will use that technique for some of the subexpressions of $T^{\\mu\\nu}_{\\rm EM}$, we don't want to rely on it for the whole expression; doing so would require us to take the derivative of the magnetic field $B^i$, which is itself found by finite-differencing the vector potential $A_i$. Thus $B^i$ cannot be *consistently* defined in ghost zones. To potentially reduce numerical errors induced by inconsistent finite differencing, we will differentiate $T^{\\mu\\nu}_{\\rm EM}$ term-by-term so that finite-difference derivatives of $A_i$ appear.\n",
+    "If we look at the evolution equation, we see that we will need spatial  derivatives of $T^{\\mu\\nu}_{\\rm EM}$. When confronted with derivatives of complicated expressions, it is generally convenient to declare those expressions as gridfunctions themselves, allowing NRPy+ to take finite-difference derivatives of the expressions. This can even reduce the truncation error associated with the finite differences, because the alternative is to use a function of several finite-difference derivatives, allowing more error to accumulate than the extra gridfunction will introduce. While we will use that technique for some of the subexpressions of $T^{\\mu\\nu}_{\\rm EM}$, we don't want to rely on it for the whole expression; doing so would require us to take the derivative of the magnetic field $B^i$, which is itself found by finite-differencing the vector potential $A_k$. Thus $B^i$ cannot be *consistently* defined in ghost zones. To potentially reduce numerical errors induced by inconsistent finite differencing, we will differentiate $T^{\\mu\\nu}_{\\rm EM}$ term-by-term so that finite-difference derivatives of $A_i$ appear.\n",
     "\n",
-    "We will now now take these spatial derivatives of $T^{\\mu\\nu}_{\\rm EM}$, applying the chain rule until it is only in terms of basic gridfunctions and their derivatives: $\\alpha$, $\\beta^i$, $\\gamma_{ij}$, $A_i$, and the four-velocity $u^i$. Along the way, we will also set up useful temporary variables representing the steps of the chain rule. (Notably, *all* of these quantities will be written in terms of $A_i$ and its derivatives):\n",
+    "We will now now take these spatial derivatives of $T^{\\mu\\nu}_{\\rm EM}$, applying the chain rule until it is only in terms of basic gridfunctions and their derivatives: $\\alpha$, $\\beta^i$, $\\gamma_{ij}$, $A_k$, and the four-velocity $u^i$. Along the way, we will also set up useful temporary variables representing the steps of the chain rule. (Notably, *all* of these quantities will be written in terms of $A_i$ and its derivatives):\n",
     "\n",
     "* $B^i$ (already computed in terms of $A_k$, via $B^i = \\epsilon^{ijk} \\partial_j A_k$), \n",
     "* $B^i_{,l}$, \n",
@@ -421,7 +421,7 @@
     "* $b^2$ (already computed), \n",
     "* and $\\left(b^2\\right)_{,j}$. \n",
     "\n",
-    "(The variables not already computed will not be seen by the ETK, as they are written in terms of $A_i$ and its derivatives; they simply help to organize the NRPy+ code.)\n",
+    "(The variables not already computed will not be seen by the ETK, as they are written in terms of $A_k$ and its derivatives; they simply help to organize the NRPy+ code.)\n",
     "\n",
     "So then, \n",
     "\\begin{align}\n",
@@ -446,7 +446,7 @@
     "\\partial_j T^{j}_{{\\rm EM} i} &= g_{\\mu i,j} T^{\\mu j}_{\\rm EM} \\\\\n",
     "&+ g_{\\mu i} \\left(\\left(b^2\\right)_{,j} u^j u^\\mu +b^2 u^j_{,j} u^\\mu + b^2 u^j u^{\\mu}_{,j} + \\frac{1}{2}\\left(b^2\\right)_{,j} g^{j\\mu} + \\frac{b^2}{2} g^{j\\mu}_{\\ ,j} + b^j_{,j} b^\\mu + b^j b^\\mu_{,j}\\right);\n",
     "\\end{align}\n",
-    "We will rearrange this once more, collecting the $\\left(b^2)\\right),j$ terms together, noting that Term A above becomes Term 1 below:\n",
+    "We will rearrange this once more, collecting the $\\left(b^2\\right)_{,j}$ terms together, noting that Term A above becomes Term 1 below:\n",
     "\\begin{align}\n",
     "\\partial_j  T^{j}_{{\\rm EM} i} =& \\ \n",
     "\\underbrace{g_{\\mu i,j} T^{\\mu j}_{\\rm EM}}_{\\rm Term\\ 1} \\\\\n",
@@ -461,7 +461,7 @@
     "\n",
     "Note that this is in terms of the derivatives of several other quantities:\n",
     "\n",
-    "* [Step 2.2.a](#capitalBideriv): $B^i_{,l}$: Since $b^i$ is itself a function of $B^i$, we will first need the derivatives $B^i_{,l}$ in terms of the evolved quantity $A_i$ (the vector potential).\n",
+    "* [Step 2.2.a](#capitalBideriv): $B^i_{,l}$: Since $b^i$ is itself a function of $B^i$, we will first need the derivatives $B^i_{,l}$ in terms of the evolved quantity $A_k$ (the vector potential).\n",
     "* [Step 2.2.b](#bideriv): $b^i_{,k}$: Once we have $B^i_{,l}$ we can evaluate derivatives of $b^i$, $b^i_{,k}$\n",
     "* [Step 2.2.c](#b2deriv): The derivative of $b^2 = g_{\\mu\\nu} b^\\mu b^\\nu$, $\\left(b^2\\right)_{,j}$\n",
     "* [Step 2.2.d](#gupijderiv): Derivatives of $g^{\\mu\\nu}$, $g^{\\mu\\nu}_{\\ ,k}$\n",
@@ -483,7 +483,7 @@
     "\n",
     "\\[Back to [List of Derivatives](#table2)\\]\n",
     "\n",
-    "First, we will build the derivatives of the magnetic field. Since $b^i$ is a function of $B^i$, we will start from the definition of $B^i$ in terms of $A_i$, $B^i = \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k$. We will first apply the product rule, noting that the symbol $[ijk]$ consists purely of the integers $-1, 0, 1$ and thus can be treated as a constant in this process.\n",
+    "First, we will build the derivatives of the magnetic field. Since $b^i$ is a function of $B^i$, we will start from the definition of $B^i$ in terms of $A_k$, $B^i = \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k$. We will first apply the product rule, noting that the symbol $[ijk]$ consists purely of the integers $-1, 0, 1$ and thus can be treated as a constant in this process.\n",
     "\\begin{align}\n",
     "B^i_{,l} &= \\partial_l \\left( \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k \\right)  \\\\\n",
     "         &= [ijk] \\partial_l \\left( \\frac{1}{\\sqrt{\\gamma}}\\right) \\partial_j A_k + \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_l \\partial_j A_k \\\\\n",
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1221,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_Higher_Order.ipynb to latex\n",
-      "[NbConvertApp] Writing 115684 bytes to Tutorial-GiRaFFE_Higher_Order.tex\n",
+      "[NbConvertApp] Writing 115492 bytes to Tutorial-GiRaFFE_Higher_Order.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
