Update Fishbone-Moncrief to latest API

--- a/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
+++ b/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
@@ -55,10 +55,10 @@
     "#         to point to these gridfunctions forces NRPy+ to treat\n",
     "#         the Cartesian coordinate gridfunctions properly --\n",
     "#         reading them from memory as needed.\n",
-    "x0,y0,z0 = gri.register_gridfunctions(\"AUX\",[\"x0\",\"y0\",\"z0\"])\n",
-    "gri.xx[0] = x0\n",
-    "gri.xx[1] = y0\n",
-    "gri.xx[2] = z0\n",
+    "xcoord,ycoord,zcoord = gri.register_gridfunctions(\"AUX\",[\"xcoord\",\"ycoord\",\"zcoord\"])\n",
+    "gri.xx[0] = xcoord\n",
+    "gri.xx[1] = ycoord\n",
+    "gri.xx[2] = zcoord\n",
     "\n",
     "# Step 3: Set up the Fishbone-Moncrief initial data. This sets all the ID gridfunctions.\n",
     "fmid.FishboneMoncriefID()\n",
@@ -88,8 +88,8 @@
     "KerrSchild_CcodeKernel = fin.FD_outputC(\"returnstring\",KerrSchild_to_print,params=\"outCverbose=False\")\n",
     "\n",
     "# -={ GRMHD quantities: Generate C code from expressions and output to file }=-\n",
-    "FMdisk_GRHD_rho0_to_print = [lhrh(lhs=gri.gfaccess(\"out_gfs\",\"rho0\"),rhs=fmid.rho0)]\n",
-    "FMdisk_GRHD_rho0_CcodeKernel = fin.FD_outputC(\"returnstring\",FMdisk_GRHD_rho0_to_print)\n",
+    "FMdisk_GRHD_rho_initial_to_print = [lhrh(lhs=gri.gfaccess(\"out_gfs\",\"rho_initial\"),rhs=fmid.rho_initial)]\n",
+    "FMdisk_GRHD_rho_initial_CcodeKernel = fin.FD_outputC(\"returnstring\",FMdisk_GRHD_rho_initial_to_print)\n",
     "\n",
     "FMdisk_GRHD_velocities_to_print = [\\\n",
     "                                 lhrh(lhs=gri.gfaccess(\"out_gfs\",\"Valencia3velocityU0\"),rhs=fmid.IDValencia3velocityU[0]),\\\n",
@@ -106,9 +106,9 @@
     "#                                          [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
     "#                                          FMdisk_GRHD_velocities_CcodeKernel.replace(\"time\",\"cctk_time\"))\n",
     "\n",
-    "#FMdisk_GRHD_rho0_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],[\"cctk_lsh[2]\",\"cctk_lsh[1]\",\"cctk_lsh[0]\"],\\\n",
+    "#FMdisk_GRHD_rho_initial_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],[\"cctk_lsh[2]\",\"cctk_lsh[1]\",\"cctk_lsh[0]\"],\\\n",
     "#                                    [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
-    "#                                    FMdisk_GRHD_rho0_CcodeKernel.replace(\"time\",\"cctk_time\"))\n",
+    "#                                    FMdisk_GRHD_rho_initial_CcodeKernel.replace(\"time\",\"cctk_time\"))\n",
     "\n",
     "# Step 7: Create directories for the thorn if they don't exist.\n",
     "!mkdir FishboneMoncriefID     2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
@@ -121,8 +121,8 @@
     "with open(\"FishboneMoncriefID/src/FMdisk_GRHD_velocities.h\", \"w\") as file:\n",
     "    file.write(str(FMdisk_GRHD_velocities_CcodeKernel.replace(\"time\",\"cctk_time\")))\n",
     "    \n",
-    "with open(\"FishboneMoncriefID/src/FMdisk_GRHD_rho0.h\", \"w\") as file:\n",
-    "    file.write(str(FMdisk_GRHD_rho0_CcodeKernel.replace(\"time\",\"cctk_time\")))\n",
+    "with open(\"FishboneMoncriefID/src/FMdisk_GRHD_rho_initial.h\", \"w\") as file:\n",
+    "    file.write(str(FMdisk_GRHD_rho_initial_CcodeKernel.replace(\"time\",\"cctk_time\")))\n",
     "\n",
     "hm1string = outputC(fmid.hm1,\"hm1\",filename=\"returnstring\")\n",
     "with open(\"FishboneMoncriefID/src/FMdisk_GRHD_hm1.h\", \"w\") as file:\n",
@@ -170,7 +170,7 @@
     "\n",
     "void FishboneMoncrief_KerrSchild(const cGH* restrict const cctkGH,const int *cctk_lsh,\n",
     "                                 const CCTK_INT *i0,const CCTK_INT *i1,const CCTK_INT *i2,\n",
-    "                                 const CCTK_REAL *x0GF,const CCTK_REAL *y0GF,const CCTK_REAL *z0GF,\n",
+    "                                 const CCTK_REAL *xcoordGF,const CCTK_REAL *ycoordGF,const CCTK_REAL *zcoordGF,\n",
     "                                 CCTK_REAL *alphaGF,CCTK_REAL *betaU0GF,CCTK_REAL *betaU1GF,CCTK_REAL *betaU2GF,\n",
     "                                 CCTK_REAL *gammaDD00GF,CCTK_REAL *gammaDD01GF,CCTK_REAL *gammaDD02GF,CCTK_REAL *gammaDD11GF,CCTK_REAL *gammaDD12GF,CCTK_REAL *gammaDD22GF,\n",
     "                                 CCTK_REAL     *KDD00GF,CCTK_REAL     *KDD01GF,CCTK_REAL     *KDD02GF,CCTK_REAL     *KDD11GF,CCTK_REAL     *KDD12GF,CCTK_REAL     *KDD22GF)\n",
@@ -184,7 +184,7 @@
     "\n",
     "void FishboneMoncrief_FMdisk_GRHD_velocities(const cGH* restrict const cctkGH,const int *cctk_lsh,\n",
     "                                             const CCTK_INT *i0,const CCTK_INT *i1,const CCTK_INT *i2,\n",
-    "                                             const CCTK_REAL *x0GF,const CCTK_REAL *y0GF,const CCTK_REAL *z0GF,\n",
+    "                                             const CCTK_REAL *xcoordGF,const CCTK_REAL *ycoordGF,const CCTK_REAL *zcoordGF,\n",
     "                                             CCTK_REAL *Valencia3velocityU0GF, CCTK_REAL *Valencia3velocityU1GF, CCTK_REAL *Valencia3velocityU2GF)\n",
     "{\n",
     "  \n",
@@ -205,9 +205,9 @@
     "  CCTK_REAL rho_max;\n",
     "  {\n",
     "    CCTK_REAL hm1;\n",
-    "    CCTK_REAL x0 = r_at_max_density;\n",
-    "    CCTK_REAL y0 = 0.0;\n",
-    "    CCTK_REAL z0 = 0.0;\n",
+    "    CCTK_REAL xcoord = r_at_max_density;\n",
+    "    CCTK_REAL ycoord = 0.0;\n",
+    "    CCTK_REAL zcoord = 0.0;\n",
     "    {\n",
     "#include \"FMdisk_GRHD_hm1.h\"\n",
     "    }\n",
@@ -218,9 +218,9 @@
     "  for(int k=0;k<cctk_lsh[2];k++) for(int j=0;j<cctk_lsh[1];j++) for(int i=0;i<cctk_lsh[0];i++) {\n",
     "        int idx = CCTK_GFINDEX3D(cctkGH,i,j,k);\n",
     "\n",
-    "        CCTK_REAL x0 = x[idx];\n",
-    "        CCTK_REAL y0 = y[idx];\n",
-    "        CCTK_REAL z0 = z[idx];\n",
+    "        CCTK_REAL xcoord = x[idx];\n",
+    "        CCTK_REAL ycoord = y[idx];\n",
+    "        CCTK_REAL zcoord = z[idx];\n",
     "        CCTK_REAL rr = r[idx];\n",
     "\n",
     "        FishboneMoncrief_KerrSchild(cctkGH,cctk_lsh,\n",
