Implemented the shifted radial coordinate to fix the Valencia velocity.

--- a/Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb
@@ -64,17 +64,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Multiplying ASphD[2] by -y/(x**2 + y**2) to set AD[0]\n",
-      "Multiplying ASphD[2] by x/(x**2 + y**2) to set AD[1]\n",
-      "Multiplying ASphD[2] by 0 to set AD[2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 1a: Import needed NRPy+ core modules:\n",
     "import NRPy_param_funcs as par\n",
@@ -419,6 +409,9 @@
     "shares: GiRaFFE_HO\n",
     "USES CCTK_REAL GAMMA_SPEED_LIMIT\n",
     "\n",
+    "shares: ShiftedKerrSchild\n",
+    "USES CCTK_REAL KerrSchild_radial_shift\n",
+    "\n",
     "restricted:\n",
     "CCTK_KEYWORD initial_data \"Type of initial data\"\n",
     "{\n",
@@ -625,7 +618,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb to latex\n",
-      "[NbConvertApp] Writing 54140 bytes to Tutorial-ETK_thorn-GiRaFFEfood_HO.tex\n",
+      "[NbConvertApp] Writing 54214 bytes to Tutorial-ETK_thorn-GiRaFFEfood_HO.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
