--- a/Tutorial-GiRaFFEfood_HO.ipynb
+++ b/Tutorial-GiRaFFEfood_HO.ipynb
@@ -73,7 +73,8 @@
     "par.initialize_param(par.glb_param(\"char\", thismodule, \"IDchoice\", \"Exact_Wald\"))\n",
     "\n",
     "# Step 1b: Set Cparameters we need to use and the gridfunctions we'll need.\n",
-    "M,M_PI = par.Cparameters(\"REAL\",thismodule,[\"M\",\"M_PI\"]) # The mass of the black hole, and pi in C\n"
+    "M,M_PI = par.Cparameters(\"REAL\",thismodule,[\"M\",\"M_PI\"]) # The mass of the black hole, and pi in C\n",
+    "KerrSchild_radial_shift = par.Cparameters(\"REAL\",thismodule,\"KerrSchild_radial_shift\")\n"
    ]
   },
   {
@@ -103,7 +104,7 @@
    "source": [
     "# Step 2: Set the vectors A and E in Spherical coordinates\n",
     "\n",
-    "r     = rfm.xxSph[0]\n",
+    "r     = rfm.xxSph[0] + KerrSchild_radial_shift # We are setting the data up in Shifted Kerr-Schild coordinates\n",
     "theta = rfm.xxSph[1]\n",
     "\n",
     "IDchoice = par.parval_from_str(\"IDchoice\")\n",
@@ -145,17 +146,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-xx1/2\n",
-      "xx0/2\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 3: Use the Jacobian matrix to transform the vectors to Cartesian coordinates.\n",
     "drrefmetric__dx_0UDmatrix = sp.Matrix([[sp.diff(rfm.xxSph[0],rfm.xx[0]), sp.diff(rfm.xxSph[0],rfm.xx[1]), sp.diff(rfm.xxSph[0],rfm.xx[2])],\n",
@@ -168,9 +159,6 @@
     "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        #print(j,i,drrefmetric__dx_0UDmatrix[(j,i)])\n",
-    "        #if ASphD[j] != 0:\n",
-    "            #print(\"Multiplying ASphD[\"+str(j)+\"] by \"+str(drrefmetric__dx_0UDmatrix[(j,i)])+\" to set AD[\"+str(i)+\"]\")\n",
     "        AD[i] = drrefmetric__dx_0UDmatrix[(j,i)]*ASphD[j]\n",
     "        ED[i] = drrefmetric__dx_0UDmatrix[(j,i)]*ESphD[j]\n",
     "        \n",
@@ -178,9 +166,7 @@
     "alpha   = gri.register_gridfunctions(\"AUX\",\"alpha\")\n",
     "betaU   = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"betaU\",DIM=3)\n",
     "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"gammaDD\", \"sym01\",DIM=3)\n",
-    "gammaUU, gammadet = ixp.symm_matrix_inverter3x3(gammaDD)\n",
-    "for i in range(DIM):\n",
-    "    print(sp.simplify(AD[i]))"
+    "gammaUU, gammadet = ixp.symm_matrix_inverter3x3(gammaDD)\n"
    ]
   },
   {
@@ -240,15 +226,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0/((xx0**2 + 0.5)**(3/4)*sqrt(sqrt(xx0**2 + 0.5) + 2))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 4b: Calculate B^2 and B_i\n",
     "# B^2 is an inner product defined in the usual way:\n",
@@ -268,8 +246,7 @@
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
-    "            ValenciavU[i] += LeviCivitaTensorUUU[i][j][k]*ED[j]*BD[k]/B2\n",
-    "print(sp.simplify(ValenciavU[1].subs(rfm.xxCart[1],0.5).subs(rfm.xxCart[2],0.5).subs(M,1)))"
+    "            ValenciavU[i] += LeviCivitaTensorUUU[i][j][k]*ED[j]*BD[k]/B2\n"
    ]
   },
   {
@@ -305,9 +282,7 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::IDchoice\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::M\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::M_PI\n",
-      "Multiplying ASphD[2] by -xx1/(xx0**2 + xx1**2) to set AD[0]\n",
-      "Multiplying ASphD[2] by xx0/(xx0**2 + xx1**2) to set AD[1]\n",
-      "Multiplying ASphD[2] by 0 to set AD[2]\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::KerrSchild_radial_shift\n",
       "^^^ Ignore the minor warnings above. ^^^\n",
       "\n",
       "Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
@@ -446,7 +421,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFEfood_HO.ipynb to latex\n",
-      "[NbConvertApp] Writing 48552 bytes to Tutorial-GiRaFFEfood_HO.tex\n",
+      "[NbConvertApp] Writing 47847 bytes to Tutorial-GiRaFFEfood_HO.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
