Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids: add some debugging info

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -440,6 +440,12 @@
     "                             points_x,points_y,points_z, input_array_names, output_f);\n",
     "\n",
     "  if(CCTK_MyProc(cctkGH)==0) {\n",
+    "    for(int i=0;i<N0*N1*N2;i++) {\n",
+    "        if(output_f[0][i] > 1e20) {\n",
+    "            printf(\"BAD POINT: %s %d %e %e %e %e\\n\",gf_name,i,points_x[i],points_y[i],points_z[i], output_f[0][i]);\n",
+    "//            exit(0);\n",
+    "        }\n",
+    "    }\n",
     "    output_to_file(CCTK_PASS_CTOC,gf_name,&order,output_f);\n",
     "    printf(\"Interpolate_to_sph_grid_main_function(): Just output to file at iteration %d\\n\",cctk_iteration);\n",
     "  } else {\n",
@@ -1248,7 +1254,7 @@
     "} \"Initialize InterpCounter variable\"\n",
     "##################\n",
     "\n",
-    "SCHEDULE GROUP SphGrid_InterpGroup AT CCTK_ANALYSIS BEFORE CarpetLib_printtimestats BEFORE CarpetLib_printmemstats WHILE interp_sph_grids_ETK::InterpCounter\n",
+    "SCHEDULE GROUP SphGrid_InterpGroup AT CCTK_ANALYSIS BEFORE CarpetLib_printtimestats BEFORE CarpetLib_printmemstats AFTER Convert_to_HydroBase WHILE interp_sph_grids_ETK::InterpCounter\n",
     "{\n",
     "} \"Perform all spherical interpolations. This group is only actually scheduled at cctk_iteration==interp_out_iteration.\"\n",
     "\n",
