Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids: Set the interpolated gridfunction on 3 timelevels so that proper prolongation can be performed

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -845,6 +845,18 @@
     "                                   Bx,By,Bz,\n",
     "                                   gxx,gxy,gxz,gyy,gyz,gzz,\n",
     "                                   betax,betay,betaz,alp, interped_gf);\n",
+    "// interped_gf will be interpolated across AMR boundaries, meaning that\n",
+    "//    it must be prolongated. Only gridfunctions with 3 timelevels stored\n",
+    "//    may be prolongated (provided time_interpolation_order is set to the\n",
+    "//    usual value of 2). We should only call this interpolation routine\n",
+    "//    at iterations in which all gridfunctions are on the same timelevel\n",
+    "//    (usually a power of 2), which will ensure that the following \n",
+    "//    \"filling of the timelevels\" is completely correct.\n",
+    "#pragma omp parallel for\n",
+    "    for(int i=0;i<cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2];i++) {\n",
+    "        interped_gf_p[i]   = interped_gf[i];\n",
+    "        interped_gf_p_p[i] = interped_gf[i];\n",
+    "    }\n",
     "}"
    ]
   },
@@ -1047,7 +1059,7 @@
     "#    gridfunctions here *does not* allocate memory for them;\n",
     "#    that is done by the schedule.ccl file.\n",
     "private:\n",
-    "CCTK_REAL interpolation_gf type=GF timelevels=1 tags='InterpNumTimelevels=1 prolongation=\"none\" Checkpoint=\"no\"'\n",
+    "CCTK_REAL interpolation_gf type=GF timelevels=3 tags='Checkpoint=\"no\"'\n",
     "{\n",
     "  interped_gf\n",
     "} \"Gridfunction containing output from interpolation.\"\n",
@@ -1230,7 +1242,7 @@
    "source": [
     "%%writefile interp_sph_grids_ETK/schedule.ccl\n",
     "\n",
-    "STORAGE: interpolation_gf[1]\n",
+    "STORAGE: interpolation_gf[3]\n",
     "STORAGE: InterpCounterVar\n",
     "STORAGE: interp_pointcoords_and_output_arrays\n",
     "    \n",
@@ -1260,7 +1272,7 @@
     "\n",
     "SCHEDULE construct_function_to_interpolate__store_to_interped_gf in SphGrid_InterpGroup before DoSum\n",
     "{\n",
-    "  STORAGE: interpolation_gf,InterpCounterVar,interp_pointcoords_and_output_arrays\n",
+    "  STORAGE: interpolation_gf[3],InterpCounterVar,interp_pointcoords_and_output_arrays\n",
     "  OPTIONS: GLOBAL,LOOP-LOCAL\n",
     "  SYNC: interpolation_gf\n",
     "  LANG: C\n",
