Added quick initial data routine

--- a/Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb
@@ -220,6 +220,7 @@
     "                  AD0,AD1,AD2,\n",
     "                  ValenciavU0,ValenciavU1,ValenciavU2);\n",
     "    \n",
+    "#pragma omp parallel for\n",
     "  for(int i2=0; i2<cctk_lsh[2]; i2++) {\n",
     "      for(int i1=0; i1<cctk_lsh[1]; i1++) {\n",
     "          for(int i0=0; i0<cctk_lsh[0]; i0++) {\n",
@@ -331,6 +332,27 @@
     "               BU0,BU1,BU2,\n",
     "               ValenciavU0,ValenciavU1,ValenciavU2,\n",
     "               StildeD0,StildeD1,StildeD2);\n",
+    "\n",
+    "  /* Write the initial data to separate, dedicated gridfunctions:\n",
+    "     These will be accessed later by VolumeIntegrals_GRMHD to assess convergence. */ \n",
+    "#pragma omp parallel for\n",
+    "  for(int i2=0; i2<cctk_lsh[2]; i2++) {\n",
+    "      for(int i1=0; i1<cctk_lsh[1]; i1++) {\n",
+    "          for(int i0=0; i0<cctk_lsh[0]; i0++) {\n",
+    "              CCTK_INT idx3 = CCTK_GFINDEX3D(cctkGH, i0,i1,i2);\n",
+    "              AD0_init[idx3] = AD0[idx3];\n",
+    "              AD1_init[idx3] = AD1[idx3];\n",
+    "              AD2_init[idx3] = AD2[idx3];\n",
+    "              psi6Phi_init[idx3] = psi6Phi[idx3];\n",
+    "              ValenciavU0_init[idx3] = ValenciavU0[idx3];\n",
+    "              ValenciavU1_init[idx3] = ValenciavU1[idx3];\n",
+    "              ValenciavU2_init[idx3] = ValenciavU2[idx3];\n",
+    "              BU0_init[idx3] = BU0[idx3];\n",
+    "              BU1_init[idx3] = BU1[idx3];\n",
+    "              BU2_init[idx3] = BU2[idx3];\n",
+    "          }\n",
+    "      }\n",
+    "  }\n",
     "}"
    ]
   },
@@ -371,7 +393,13 @@
    "source": [
     "%%writefile GiRaFFEfood_HO/interface.ccl\n",
     "implements: GiRaFFEfood_HO\n",
-    "inherits: admbase GiRaFFE_HO grid HydroBase ShiftedKerrSchild\n"
+    "inherits: admbase GiRaFFE_HO grid HydroBase ShiftedKerrSchild\n",
+    "\n",
+    "public:\n",
+    "cctk_real GiRaFFEfood_init type = GF Timelevels=1 tags='prolongation=\"none\"'\n",
+    "{\n",
+    "  AD0_init,AD1_init,AD2_init,psi6Phi_init,ValenciavU0_init,ValenciavU1_init,ValenciavU2_init,BU0_init,BU1_init,BU2_init\n",
+    "} \"Stores the initial data for later debugging\"\n"
    ]
   },
   {
@@ -457,6 +485,7 @@
     "%%writefile GiRaFFEfood_HO/schedule.ccl\n",
     "STORAGE: GiRaFFE_HO::GiRaFFE_vars[3]\n",
     "STORAGE: GiRaFFE_HO::GiRaFFE_Vs[1]\n",
+    "STORAGE: GiRaFFEfood_init[1]\n",
     "\n",
     "STORAGE: HydroBase::rho[1],HydroBase::press[1],HydroBase::eps[1],HydroBase::vel[1],HydroBase::Avec[1],HydroBase::Aphi[1]\n",
     "            \n",
@@ -618,7 +647,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb to latex\n",
-      "[NbConvertApp] Writing 54214 bytes to Tutorial-ETK_thorn-GiRaFFEfood_HO.tex\n",
+      "[NbConvertApp] Writing 55757 bytes to Tutorial-ETK_thorn-GiRaFFEfood_HO.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
