--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -513,25 +513,22 @@
     "// Step 4: Free all allocated memory\n",
     "int main(int argc, const char *argv[]) {\n",
     "    // Step 0a: Read command-line input, error out if nonconformant\n",
-    "    if(argc != 4 || atoi(argv[1]) < NGHOSTS) {\n",
-    "        fprintf(stderr,\"Error: Expected three command-line arguments: ./BSSNCurvilinear_Playground Nx0 Nx1 Nx2,\\n\");\n",
+    "    if(argc != 4 || atoi(argv[1]) < NGHOSTS || atoi(argv[2]) < NGHOSTS || atoi(argv[3]) < 2 /* FIXME; allow for axisymmetric sims */) {\n",
+    "        fprintf(stderr,\"Error: Expected three command-line arguments: ./BrillLindquist_Playground Nx0 Nx1 Nx2,\\n\");\n",
     "        fprintf(stderr,\"where Nx[0,1,2] is the number of grid points in the 0, 1, and 2 directions.\\n\");\n",
     "        fprintf(stderr,\"Nx[] MUST BE larger than NGHOSTS (= %d)\\n\",NGHOSTS);\n",
     "        exit(1);\n",
     "    }\n",
     "    // Step 0b: Set up numerical grid structure, first in space...\n",
-    "    const int Nx0 = atoi(argv[1]);\n",
-    "    const int Nx1 = atoi(argv[2]);\n",
-    "    const int Nx2 = atoi(argv[3]);\n",
-    "    if(Nx0%2 != 0 || Nx1%2 != 0 || Nx2%2 != 0) {\n",
+    "    const int Nxx[3] = { atoi(argv[1]), atoi(argv[2]), atoi(argv[3]) };\n",
+    "    if(Nxx[0]%2 != 0 || Nxx[1]%2 != 0 || Nxx[2]%2 != 0) {\n",
     "        fprintf(stderr,\"Error: Cannot guarantee a proper cell-centered grid if number of grid cells not set to even number.\\n\");\n",
     "        fprintf(stderr,\"       For example, in case of angular directions, proper symmetry zones will not exist.\\n\");\n",
     "        exit(1);\n",
     "    }\n",
-    "    const int Nxx[3] = { Nx0, Nx1, Nx2 };\n",
     "    const int Nxx_plus_2NGHOSTS[3] = { Nxx[0]+2*NGHOSTS, Nxx[1]+2*NGHOSTS, Nxx[2]+2*NGHOSTS };\n",
     "    const int Nxx_plus_2NGHOSTS_tot = Nxx_plus_2NGHOSTS[0]*Nxx_plus_2NGHOSTS[1]*Nxx_plus_2NGHOSTS[2];\n",
-    "    #include \"xxminmax.h\"\n",
+    "#include \"xxminmax.h\"\n",
     "\n",
     "    // Step 0c: Allocate memory for gridfunctions\n",
     "    REAL *evol_gfs = (REAL *)malloc(sizeof(REAL) * NUM_EVOL_GFS * Nxx_plus_2NGHOSTS_tot);\n",
