--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "# NRPy+ Tutorial\n",
     "\n",
-    "**[Zachariah B. Etienne](http://math.wvu.edu/~zetienne/)** $\\leftarrow$ Please feel free to email comments, revisions, or errata! \n",
+    "**Lead author: [Zachariah B. Etienne](http://math.wvu.edu/~zetienne/)** $\\leftarrow$ Please feel free to email comments, revisions, or errata! \n",
     "\n",
     "### PART 1: Basic Functionality of NRPy+, a First Application\n",
     "##### NRPy+ Basics\n",
@@ -55,18 +55,19 @@
     "+ Application: [Maxwell's Equations in Curvilinear Coordinates, using a Reference Metric](Tutorial-MaxwellCurvilinear.ipynb) (*Courtesy Ian Ruchlin*)\n",
     "+ Application: [General Relativity in the BSSN Formalism, in singular curvilinear coordinates](Tutorial-BSSNCurvilinear.ipynb)\n",
     "    + *Initial data modules*:\n",
-    "        + [UIUC Black Holes: Setting up spinning, single-black-hole initial data](Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb)\n",
+    "        + [Non-Spinning (\"static trumpet\") black hole initial data](Tutorial-ADM_Initial_Data-StaticTrumpet.ipynb) (*Courtesy Terrence Pierre Jacques & Ian Ruchlin*)\n",
+    "        + [Spinning (\"UIUC\") Black Hole initial data](Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb) (*Courtesy Terrence Pierre Jacques & Ian Ruchlin*)\n",
     "        + [Brill-Lindquist: Setting up two-black-hole initial data](Tutorial-ADM_Initial_Data-Brill-Lindquist.ipynb)\n",
     "    + [**Exact** ADM Spherical/Cartesian to BSSN Curvilinear Initial Data Conversion](Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb) (Use this module for initial data conversion if the initial data are known *exactly*. The BSSN quantity $\\lambda^i$ will be computed exactly using SymPy from given ADM quantities.)\n",
-    "        + *Initial data validation module*:\n",
-    "            + **Start-to-Finish Example**: [Two-black-hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data.ipynb)\n",
-    "        + *Simulation example*:\n",
-    "            + **Start-to-Finish Example**: [Colliding black holes!](Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb)\n",
+    "        + **Start-to-Finish initial data validation modules**:\n",
+    "            + [Non-Spinning (\"static trumpet\") black hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Trumpet_BH_initial_data.ipynb) (*Courtesy Terrence Pierre Jacques*)\n",
+    "            + [Two-black-hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data.ipynb)\n",
+    "        + **Start-to-Finish simulation example**:\n",
+    "            + [**Colliding black holes!**](Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb)\n",
     "    + [**Numerical** ADM Spherical/Cartesian to BSSN Curvilinear Initial Data Conversion](Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb) (Use this module for initial data conversion if the initial data are provided by an initial data solver, and are thus known to roundoff error at best. The BSSN quantity  $\\lambda^i$ will be computed using finite-difference derivatives from given ADM quantities.)\n",
-    "        + *Initial data validation modules* (Note that UIUC black hole initial data are *exact*; however we choose to set them up as though they were only known numerically, as a code validation test. TOV initial data are generated via [the solution of a system of ODEs](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation), thus are known only numerically):\n",
-    "            + **Start-to-Finish Example**: [Spinning UIUC Black Hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_spinning_UIUC_BH_initial_data.ipynb)\n",
-    "            + **Start-to-Finish Example**: [Neutron star (TOV solution) initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb)\n",
-    "    + Application (in progress) [Adding the $8\\pi T^{\\mu\\nu}$ source terms to the BSSN Equations](Tutorial-BSSNCurvilinear_Plus_Matter_Sources.ipynb)"
+    "        + **Start-to-Finish initial data validation modules**: (Note that UIUC black hole initial data are *exact*; however we choose to set them up as though they were only known numerically, as a validation test for the **numerical** ADM-Spherical-to-BSSN-Curvilinear initial data conversion module. TOV initial data on the other hand are generated via [the solution of a system of ODEs](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation), thus are truly known only numerically):\n",
+    "            + [Spinning (\"UIUC\") black hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_spinning_UIUC_BH_initial_data.ipynb)\n",
+    "            + [Neutron star (TOV solution) initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb)"
    ]
   }
  ],
