--- a/Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb
+++ b/Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# UIUC Black Hole Initial data\n",
     "\n",
+    "**Authors: Terrence Pierre Jacques, Zachariah Etienne, and Ian Ruchlin**\n",
+    "\n",
     "## This module sets up UIUC Black Hole initial data ([Liu, Etienne, & Shapiro, PRD 80 121503, 2009](https://arxiv.org/abs/1001.4077)). We can convert from spherical to any coordinate system defined in [reference_metric.py](../edit/reference_metric.py) (e.g., SinhSpherical, Cylindrical, Cartesian, etc.) using the [Exact ADM Spherical-or-Cartesian-to-BSSNCurvilinear converter module](Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb)\n",
     "\n",
     "### NRPy+ Source Code for this module: [BSSN/BrillLindquist.py](../edit/BSSN/BrillLindquist.py)\n",
@@ -28,8 +30,56 @@
     "\n",
     "**Additional variables needed for spacetime evolution**:\n",
     "\n",
-    "* Desired coordinate system\n",
-    "* Desired initial lapse $\\alpha$ and shift $\\beta^i$. We will choose our gauge conditions as $\\alpha=1$ and $\\beta^i=B^i=0$. $\\alpha = \\psi^{-2}$ will yield much better behavior, but the conformal factor $\\psi$ depends on the desired *destination* coordinate system (which may not be spherical coordinates)."
+    "* Desired coordinate system Boyer-Lindquist coordinates $(r_{BL}, \\theta, \\phi)$\n",
+    "<br>\n",
+    "* Desired initial lapse $\\alpha$ and shift $\\beta^i$. We will choose our gauge conditions as $\\alpha=1$ and $\\beta^i=B^i=0$. $\\alpha = \\psi^{-2}$ will yield much better behavior, but the conformal factor $\\psi$ depends on the desired *destination* coordinate system (which may not be spherical coordinates).\n",
+    "\n",
+    "<a id='top'></a>\n",
+    "$$\\label{top}$$\n",
+    "\n",
+    "### Table of Contents:  \n",
+    "\n",
+    "1. Preliminaries\n",
+    "    1. [Steps 1](#step1): Set up the basic NRPy+ infrastructure we need \n",
+    "        * This part imports the core NRPy+ modules that we need, sets the dimensionality of the grid with parameter $\\text{grid::DIM}$, and declares some of the basic gridfunctions\n",
+    "   \n",
+    "1. Defining Radii\n",
+    "    1. [Step 2.1](#step2): Define the inner and outer radii\n",
+    "    1. [Step 2.2](#step3): Define the Boyer-Lindquist radius\n",
+    "    \n",
+    "1. The Line Element\n",
+    "    1. [Step 3](#step4): Define the line element, and extract components of $\\gamma_{ij}$\n",
+    "    \n",
+    "1. Extrinsic Curvature $K_{ij}$\n",
+    "    1. [Step 4](#step5): Define nonzero components of $K_{ij}$\n",
+    "    \n",
+    "1. Lapse function $\\alpha$ and shift vector $\\beta$\n",
+    "    1. [Step 5](#step6): Construct $\\alpha$ and components of $\\beta$\n",
+    "    \n",
+    "1. Code Validation\n",
+    "    1. [Step 6](#step7): NRPy+ Module Code Validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preliminaries\n",
+    "\n",
+    "First, we will import the core modules of NRPy that we will need and specify the main gridfunctions we will need. \n",
+    "\n",
+    "<a id='step1'></a>\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
+    "## Steps 1.0: Set up the needed NRPy+ infrastructure and declare core gridfunctions\n",
+    "\n",
+    "1. Set some basic NRPy+ parameters. E.g., set the spatial dimension parameter to 3\n",
+    "\n",
+    "**Inputs for initial data**:\n",
+    "\n",
+    "* The black hole mass $M$.\n",
+    "* The dimensionless spin parameter $\\chi = a/M$\n",
+    "$$\\label{step1}$$"
    ]
   },
   {
@@ -38,7 +88,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step P0: Load needed modules\n",
     "import sympy as sp\n",
     "import NRPy_param_funcs as par\n",
     "import indexedexp as ixp\n",
@@ -51,11 +100,8 @@
     "\n",
     "thismodule = \"UIUCBlackHole\"\n",
     "\n",
-    "# Step 0: Set spatial dimension (must be 3 for BSSN)\n",
     "DIM = 3\n",
     "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
-    "\n",
-    "# Step 1: Set psi, the conformal factor:\n",
     "\n",
     "# The UIUC initial data represent a Kerr black hole with mass M\n",
     "#  and dimensionless spin chi in UIUC quasi-isotropic coordinates,\n",
@@ -66,48 +112,218 @@
     "# Auxiliary variables:\n",
     "a,rp,rm,rBL,SIG,DEL,AA = sp.symbols('a rp rm rBL SIG DEL AA', real=True)\n",
     "# Spin per unit mass\n",
-    "a = M*chi\n",
-    "\n",
-    "# Boyer - Lindquist outer horizon\n",
-    "rp = M + sp.sqrt(M**2 - a**2)\n",
-    "# Boyer - Lindquist inner horizon\n",
-    "rm = M - sp.sqrt(M**2 - a**2)\n",
-    "\n",
-    "# Boyer - Lindquist radius in terms of UIUC radius\n",
-    "rBL = r*(1 + rp / (4*r))**2\n",
-    "\n",
-    "# UIUC definitions (Just below Eq 2)\n",
-    "SIG = rBL**2 + a**2*sp.cos(th)**2\n",
-    "DEL = rBL**2 - 2*M*rBL + a**2\n",
-    "AA = (rBL**2 + a**2)**2 - DEL*a**2*sp.sin(th)**2\n",
-    "\n",
-    "# *** The ADM 3-metric in spherical basis ***\n",
-    "gammaSphDD = ixp.zerorank2()\n",
-    "# Declare the nonzero components of the 3-metric (Eq 2):\n",
-    "gammaSphDD[0][0] = ((SIG*(r + rp/4)**2)/(r**3*(rBL - rm)))\n",
-    "gammaSphDD[1][1] = SIG\n",
-    "gammaSphDD[2][2] = AA/SIG*sp.sin(th)**2\n",
-    "\n",
-    "# *** The physical trace-free extrinsic curvature in spherical basis ***\n",
-    "# Declare the nonzero components of the extrinsic curvature (Eqs 14-15):\n",
-    "KSphDD     = ixp.zerorank2() # K_{ij} = 0 for these initial data\n",
-    "KSphDD[0][2] = KSphDD[2][0] = (M*a*sp.sin(th)**2)/(SIG*sp.sqrt(AA*SIG))*\\\n",
-    "                (3*rBL**4 + 2*a**2*rBL**2 - a**4- a**2*(rBL**2 - a**2)*sp.sin(th)**2)*(1 + rp/(4*r))*1/sp.sqrt(r*(rBL - rm))\n",
-    "KSphDD[1][2] = KSphDD[2][1] = -((2*a**3*M*rBL*sp.cos(th)*sp.sin(th)**3)/(SIG*sp.sqrt(AA*SIG)))*(r - rp/4)*sp.sqrt((rBL - rm)/r)\n",
-    "\n",
-    "alphaSph = sp.sympify(1)\n",
-    "betaSphU = ixp.zerorank1() # We generally choose \\beta^i = 0 for these initial data\n",
-    "BSphU    = ixp.zerorank1() # We generally choose B^i = 0 for these initial data\n",
-    "\n",
-    "# Validated against original SENR: KSphDD[0][2], KSphDD[1][2], gammaSphDD[2][2], gammaSphDD[0][0], gammaSphDD[1][1]\n",
-    "#print(sp.mathematica_code(gammaSphDD[1][1]))"
+    "a = M*chi"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NRPy+ Module Code Validation\n",
+    "## Step 2.1: Defining the Inner and Outer Radii\n",
+    "<a id='step2'></a>\n",
+    "$$\\label{step2}$$\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
+    "Boyer-Lindquist radii of the outer (+) and inner (−) horizons of the BH, defined under equation 1 in [Liu, Etienne, & Shapiro (2009)](https://arxiv.org/abs/1001.4077) as \n",
+    "$$ r_{\\pm} = M \\pm \\sqrt{M^2 - a^2}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defined under equation 1 in Liu, Etienne, & Shapiro (2009) \n",
+    "# https://arxiv.org/pdf/1001.4077.pdf\n",
+    "\n",
+    "# Boyer - Lindquist outer horizon\n",
+    "rp = M + sp.sqrt(M**2 - a**2)\n",
+    "# Boyer - Lindquist inner horizon\n",
+    "rm = M - sp.sqrt(M**2 - a**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2.2: Define the Boyer-Lindquist Radius\n",
+    "<a id='step3'></a>\n",
+    "$$\\label{step3}$$\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
+    "Define $r_{BL}$, equation 11 of [Liu, Etienne, & Shapiro (2009)](https://arxiv.org/abs/1001.4077), using the radial coordinate $r$:\n",
+    "\n",
+    "$$  r_{BL} = r \\left( 1 + \\frac{r_+}{4r}\\right)^2.  $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Boyer - Lindquist radius in terms of UIUC radius\n",
+    "# Eq. 11\n",
+    "# r_{BL} = r * ( 1 + r_+ / 4r )^2\n",
+    "rBL = r*(1 + rp / (4*r))**2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quantities used to calculate the spatial metric $\\gamma_{ij}$, found under equation 2 of [Liu, Etienne, & Shapiro (2009)](https://arxiv.org/abs/1001.4077):\n",
+    "$$  \\Sigma = r_{BL}^2 + a^2 \\cos^2 \\theta, $$\n",
+    "\n",
+    "$$ \\Delta = r_{BL}^2 - 2Mr_{BL} + a^2,  $$ \n",
+    "\n",
+    "$$  A = \\left(r_{BL}^2 + a^2\\right)^2 - \\Delta a^2 \\sin^2 \\theta.  $$ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Expressions found below Eq. 2\n",
+    "# Sigma = r_{BL}^2 + a^2 cos^2 theta\n",
+    "SIG = rBL**2 + a**2*sp.cos(th)**2\n",
+    "\n",
+    "# Delta = r_{BL}^2 - 2Mr_{BL} + a^2\n",
+    "DEL = rBL**2 - 2*M*rBL + a**2\n",
+    "\n",
+    "# A = (r_{BL}^2 + a^2)^2 - Delta a^2 sin^2 theta\n",
+    "AA = (rBL**2 + a**2)**2 - DEL*a**2*sp.sin(th)**2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 3: Define the Line element\n",
+    "<a id='step4'></a>\n",
+    "$$\\label{step4}$$\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
+    "The line element, defined in equation 13 of [Liu, Etienne, & Shapiro (2009)](https://arxiv.org/abs/1001.4077):\n",
+    "\n",
+    "$$ ds^2 = \\frac{\\Sigma\\left(r + \\frac{r_+}{4}\\right)^2 } {r^3 \\left(r_{BL} - r_- \\right)} dr^2 + \\Sigma d\\theta^2  +  \\frac{ A \\sin^2 \\theta  }{\\Sigma} d\\phi^2  $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** The ADM 3-metric in spherical basis ***\n",
+    "gammaSphDD = ixp.zerorank2()\n",
+    "# Declare the nonzero components of the 3-metric (Eq. 13):\n",
+    "\n",
+    "# ds^2 = Sigma (r + r_+/4)^2 / ( r^3 (r_{BL} - r_- ) * dr^2 + \n",
+    "# Sigma d theta^2  +  (A sin^2 theta) / Sigma  *  d\\phi^2\n",
+    "\n",
+    "gammaSphDD[0][0] = ((SIG*(r + rp/4)**2)/(r**3*(rBL - rm)))\n",
+    "gammaSphDD[1][1] = SIG\n",
+    "gammaSphDD[2][2] = AA/SIG*sp.sin(th)**2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4: The Extrinsic Curvature $K_{ij}$\n",
+    "<a id='step5'></a>\n",
+    "$$\\label{step5}$$\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
+    "Nonzero components of the extrinsic curvature, equation 14 of [Liu, Etienne, & Shapiro (2009)](https://arxiv.org/abs/1001.4077):\n",
+    "\n",
+    "$$ K_{r\\phi} = K_{\\phi r} = \\frac{Ma\\sin^2\\theta}{\\Sigma\\sqrt{A\\Sigma}} \\ \n",
+    "    \\left[3r^4_{BL} + 2a^2 r^2_{BL} - a^4 - a^2 \\left(r^2_{BL} - a^2\\right) \\sin^2 \\theta\\right] \\\n",
+    "    \\left(1 + \\frac{r_+}{4r}\\right) \\frac{1}{\\sqrt{r(r_{BL} - r_-)}}  $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** The physical trace-free extrinsic curvature in spherical basis ***\n",
+    "# Nonzero components of the extrinsic curvature K, given by Eqs. 14:\n",
+    "KSphDD     = ixp.zerorank2() # K_{ij} = 0 for these initial data\n",
+    "\n",
+    "\n",
+    "# K_{r phi} = K_{phi r} = (Ma sin^2 theta) / (Sigma sqrt{A Sigma}) *\n",
+    "#     [3r^4_{BL} + 2a^2 r^2_{BL} - a^4 - a^2 (r^2_{BL} - a^2) sin^2 theta] *\n",
+    "#     (1 + r_+ / 4r) (1 / sqrt{r(r_{BL} - r_-)})\n",
+    "\n",
+    "KSphDD[0][2] = KSphDD[2][0] = (M*a*sp.sin(th)**2)/(SIG*sp.sqrt(AA*SIG))*\\\n",
+    "                (3*rBL**4 + 2*a**2*rBL**2 - a**4- a**2*(rBL**2 - a**2)*\\\n",
+    "                 sp.sin(th)**2)*(1 + rp/(4*r))*1/sp.sqrt(r*(rBL - rm))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nonzero components of the extrinsic curvature, equation 15 of [Liu, Etienne, & Shapiro (2009)](https://arxiv.org/abs/1001.4077):\n",
+    "\n",
+    "$$ K_{\\theta\\phi} = K_{\\phi\\theta} = -\\frac{2a^3 Mr_{BL}\\cos\\theta \\sin^3\\theta} {\\Sigma \\sqrt{A\\Sigma} } \\left(r - \\frac{r_+}{4}\\right) \\sqrt {\\frac{r_{BL} - r_-}{r} }  $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Components of the extrinsic curvature K, given by Eq. 15:\n",
+    "\n",
+    "# K_{theta phi} = K_{phi theta} = -(2a^3 Mr_{BL} cos theta sin^3 theta) / \n",
+    "#         (Sigma sqrt{A Sigma}) x (r - r_+ / 4) sqrt{(r_{BL} - r_-) / r }\n",
+    "\n",
+    "KSphDD[1][2] = KSphDD[2][1] = -((2*a**3*M*rBL*sp.cos(th)*sp.sin(th)**3)/ \\\n",
+    "                (SIG*sp.sqrt(AA*SIG)))*(r - rp/4)*sp.sqrt((rBL - rm)/r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 5: Construct $\\alpha$ and components of $\\beta$\n",
+    "$$\\alpha=1$$ \n",
+    "<br>\n",
+    "$$\\beta^i=B^i=0$$\n",
+    "<a id='step6'></a>\n",
+    "$$\\label{step6}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alphaSph = sp.sympify(1)\n",
+    "betaSphU = ixp.zerorank1() # We generally choose \\beta^i = 0 for these initial data\n",
+    "BSphU    = ixp.zerorank1() # We generally choose B^i = 0 for these initial data\n",
+    "\n",
+    "# Validated against original SENR: KSphDD[0][2], KSphDD[1][2], gammaSphDD[2][2], gammaSphDD[0][0], gammaSphDD[1][1]\n",
+    "# print(sp.mathematica_code(gammaSphDD[1][1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 6: NRPy+ Module Code Validation\n",
+    "<a id='step7'></a>\n",
+    "$$\\label{step7}$$\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for UIUC black hole initial data between\n",
     "\n",
@@ -117,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -184,6 +400,44 @@
     "              str(sp.simplify(gammaSphDD[i][j] - uibh.gammaSphDD[i][j])))\n",
     "        print(\"KSphDD[\"+str(i)+\"][\"+str(j)+\"] - uibh.KSphDD[\"+str(i)+\"][\"+str(j)+\"]: Should be zero: \"+\\\n",
     "              str(sp.simplify(KSphDD[i][j] - uibh.KSphDD[i][j])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Output to $\\LaTeX$, then PDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb to latex\n",
+      "[NbConvertApp] Writing 43356 bytes to Tutorial-ADM_Initial_Data-UIUC_BlackHole.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-ADM_Initial_Data-UIUC_BlackHole.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-ADM_Initial_Data-UIUC_BlackHole.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-ADM_Initial_Data-UIUC_BlackHole.tex\n",
+    "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
  ],
