--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb
@@ -322,7 +322,7 @@
     "    return R_Schw, M\n",
     "\n",
     "R_Schw_TOV,M_TOV = integrateStar(TOV_pressure(rho_baryon_central), True)\n",
-    "print(\"Just generated a TOV star with R_Schw= \"+str(R_Schw_TOV)+\" , M = \"+str(M_TOV)+\" , M/R_Schw = \"+str(M_TOV/R_Schw_TOV)+\" .\")"
+    "print(\"Just generated a TOV star with R_Schw = \"+str(R_Schw_TOV)+\" , M = \"+str(M_TOV)+\" , M/R_Schw = \"+str(M_TOV/R_Schw_TOV)+\" .\")"
    ]
   },
   {
@@ -340,7 +340,7 @@
     "ds^2 = - c^2 e^\\nu dt^2 + \\left(1 - \\frac{2GM}{rc^2}\\right)^{-1} dr^2 + r^2 d\\Omega^2.\n",
     "$$\n",
     "\n",
-    "In *isotropic coordinates* with $G=c=1$ (i.e., the coordinate system we'd prefer to use), the ($-+++$ form) line element is written:\n",
+    "In *isotropic coordinates* with $G=c=1$ (i.e., the coordinate system and units we'd prefer to use), the ($-+++$ form) line element is written:\n",
     "$$\n",
     "ds^2 = - e^{\\nu} dt^2 + e^{4\\phi} \\left(d\\bar{r}^2 + \\bar{r}^2 d\\Omega^2\\right),\n",
     "$$\n",
