--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -259,8 +259,8 @@
     "  DECLARE_CCTK_PARAMETERS;\n",
     "\n",
     "  CCTK_REAL dx0 = log( (Rout - R0) / (Rin - R0) ) / ((CCTK_REAL)N0);\n",
-    "  CCTK_REAL dx1 = 1.0 / ((CCTK_REAL)N1);\n",
-    "  CCTK_REAL dx2 = 1.0 / ((CCTK_REAL)N2);\n",
+    "  CCTK_REAL dx1 =      1.0 / ((CCTK_REAL)N1);\n",
+    "  CCTK_REAL dx2 = 2.0*M_PI / ((CCTK_REAL)N2);\n",
     "  CCTK_REAL x0_beg = log( Rin - R0 );\n",
     "  CCTK_INT which_pt = 0;\n",
     "  for(CCTK_INT k=0;k<N2;k++) for(CCTK_INT j=0;j<N1;j++) for(CCTK_INT i=0;i<N0;i++) {\n",
@@ -615,6 +615,16 @@
     "    gf_interp_list.append(gf_interp(\"Lorentz factor, times Valencia vU\"+str(i),order=\"1\"))\n",
     "    interp_expr = Gamma_times_ValenciavU[i]\n",
     "    which_InterpCounter = interp_fileout(which_InterpCounter,interp_expr,NRPyoutfilename)\n",
+    "\n",
+    "# For testing:\n",
+    "# gf_interp_list.append(gf_interp(\"Lorentz factor\",order=\"1\"))\n",
+    "# interp_expr = v_dot_v\n",
+    "# which_InterpCounter = interp_fileout(which_InterpCounter,interp_expr,NRPyoutfilename)\n",
+    "\n",
+    "# for i in range(DIM):\n",
+    "#     gf_interp_list.append(gf_interp(\"Valencia vU\"+str(i),order=\"1\"))\n",
+    "#     interp_expr = Valenciav[i]\n",
+    "#     which_InterpCounter = interp_fileout(which_InterpCounter,interp_expr,NRPyoutfilename)\n",
     "\n",
     "BU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"BU\")\n",
     "for i in range(DIM):\n",
@@ -1257,7 +1267,7 @@
     "{\n",
     "  LANG: C\n",
     "  OPTIONS: GLOBAL\n",
-    "} \"Initialize InterplCounter variable to zero\"\n",
+    "} \"Initialize InterpCounter variable to zero\"\n",
     "\n",
     "SCHEDULE SphGrid_InitializeInterpCounter before SphGrid_InterpGroup AT CCTK_ANALYSIS\n",
     "{\n",
@@ -1457,7 +1467,17 @@
     "        ii = int(N0/2)\n",
     "        jj = int(N1/2)\n",
     "        kk = int(N2/2)\n",
-    "        print(gf_name,this_data[kk,jj,ii])\n",
+    "        with open(\"output-gf\"+str(i)+\".txt\",\"w\") as file:\n",
+    "            for ii in range(N0):\n",
+    "                for kk in range(N2):\n",
+    "                    r  = ii*1.0/N0\n",
+    "                    th = (jj*1.0)*np.pi/N1\n",
+    "                    ph = (kk*1.0)*2.0*np.pi/N2\n",
+    "                    xx = r*np.sin(th)*np.cos(ph)\n",
+    "                    yy = r*np.sin(th)*np.sin(ph)\n",
+    "                    zz = r*np.cos(th)\n",
+    "                    file.write(str(xx)+\" \"+str(yy)+\" \"+str(zz)+\" \"+str(this_data[kk,jj,ii])+\"\\n\")\n",
+    "\n",
     "```"
    ]
   }
