--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -690,6 +690,7 @@
    "outputs": [],
    "source": [
     "!cd ScalarWaveCurvilinear/\n",
+    "!rm -f ScalarWaveCurvilinear_Playground out20x10x20.txt out24x12x24.txt\n",
     "!gcc -Ofast -march=native -ftree-parallelize-loops=2 -fopenmp ScalarWaveCurvilinear/ScalarWaveCurvilinear_Playground.c -o ScalarWaveCurvilinear_Playground -lm\n",
     "!taskset -c 0,1 ./ScalarWaveCurvilinear_Playground 20 10 20 > out20x10x20.txt\n",
     "!taskset -c 0,1 ./ScalarWaveCurvilinear_Playground 24 12 24 > out24x12x24.txt"
