Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV: make clickable

--- a/Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.ipynb
+++ b/Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.ipynb
@@ -14,6 +14,8 @@
     "\n",
     "### NRPy+ Source Code for this module: [TOV/TOV_Solver.py](../edit/TOV/TOV_Solver.py)\n",
     "\n",
+    "<a id='top'></a>$$\\label{top}$$\n",
+    "\n",
     "## Introduction\n",
     "\n",
     "[Tolman-Oppenheimer-Volkoff (TOV)](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation) initial data are constructed from the solution of a system of [ODEs](https://en.wikipedia.org/wiki/Ordinary_differential_equation). The solution is spherically symmetric.\n",
@@ -24,9 +26,9 @@
     "\n",
     "## Table of Contents\n",
     "\n",
-    "1. [Step 1](#step1): Overview of the [Tolman-Oppenheimer-Volkoff (TOV)] (https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation) equations\n",
-    "1. [Step 2](#step2): Python code for solving the TOV equations using NumPy's ODE solver, outputting the data to a file.\n",
-    "    1. [Step 2.1](#step2p1): Validation of the TOV output file against a trusted version.\n",
+    "1. [Step 1](#step1): Overview of the [Tolman-Oppenheimer-Volkoff (TOV)](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation) solution to Einstein's equations\n",
+    "1. [Step 2](#step2): Python code for solving the TOV equations using NumPy's ODE solver, outputting the data to a file\n",
+    "    1. [Step 2.1](#step2p1): Validation of the TOV output file against a trusted version\n",
     "1. [Step 3](#step3): C code to construct ADM spacetime quantities and $T^{\\mu\\nu}$\n",
     "    1. [Step 3.1](#step3p1): Reading in the data file, generated in [Step 2](#step2).\n",
     "    1. [Step 3.2](#step3p2): Interpolating the data to any desired radius\n",
@@ -38,7 +40,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The TOV equations\n",
+    "<a id='step1'></a>\n",
+    "\n",
+    "## Step 1: Overview of the [Tolman-Oppenheimer-Volkoff (TOV)](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation) solution to Einstein's equations\n",
+    "$$\\label{step1}$$\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
     "The [TOV line element](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation) in terms of the *Schwarzschild coordinate* $r$ is written (in the $-+++$ form):\n",
     "$$\n",
@@ -94,9 +100,21 @@
     "\\frac{d \\nu}{d r} &= \\frac{1}{r}\\left(1 - \\frac{2 m}{r}\\right)^{-1} \\left(\\frac{2 m}{r} + 8 \\pi r^2 P\\right) \\\\\n",
     "\\frac{m(r)}{dr} &= 4\\pi r^2 \\rho(r) \\\\\n",
     "\\frac{d\\bar{r}(r)}{dr} &= \\left(1 - \\frac{2m}{r} \\right)^{-1/2} \\frac{\\bar{r}(r)}{r}.\n",
-    "\\end{align}\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='step2'></a>\n",
     "\n",
-    "The following code solves these equations, and was largely written by Phil Chang."
+    "## Step 2: Python code for solving the TOV equations using NumPy's ODE solver, outputting the data to a file\n",
+    "\n",
+    "$$\\label{step2}$$\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
+    "The following code solves the above equations, and was largely written by **Phil Chang**."
    ]
   },
   {
@@ -259,7 +277,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NRPy+ Module Code Validation\n",
+    "<a id='step2p1'></a>\n",
+    "\n",
+    "## Step 2.1: Validation of the TOV output file against a trusted version\n",
+    "$$\\label{step2p1}$$\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for these TOV initial data between\n",
     "\n",
@@ -293,6 +315,48 @@
     "    exit(1)\n",
     "else:\n",
     "    print(\"TOV initial data test PASSED.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='step3'></a>\n",
+    "\n",
+    "## Step 3: C code to construct ADM spacetime quantities and $T^{\\mu\\nu}$\n",
+    "$$\\label{step3}$$\n",
+    "\\[Back to [top](#top)\\]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.ipynb to latex\n",
+      "[NbConvertApp] Writing 42938 bytes to Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.tex\n",
+    "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
  ],
